<resources>
    <string name="app_name">Forecast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_week">Week</string>
    <string name="tv_wind">Wind</string>
    <string name="tv_pressure">Pressure</string>
    <string name="tv_humidity">Humidity</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_language">Language</string>
    <string name="rb_arabic">Arabic</string>
    <string name="rb_english">English</string>
    <string name="tv_temperature">Temperature</string>
    <string name="rb_celsius">Celsius</string>
    <string name="rb_kelvin">Kelvin</string>
    <string name="rb_fahrenheit">Fahrenheit</string>
    <string name="tv_wind_speed">Wind Speed</string>
    <string name="rb_meter_sec">Meter / Sec</string>
    <string name="rb_miles_hour">Miles / Hour</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_save">Save</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="rb_alarm">Alarm</string>
    <string name="rb_notification">Notification</string>
    <string name="btn_save_alert">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tv_location">Location</string>
    <string name="rb_gps">GPS</string>
    <string name="rb_maps">Maps</string>
    <string name="title_activity_home_map">HomeMap</string>
    <string name="tv_clouds">Clouds</string>
    <string name="tv_visibility">Visibility</string>
    <string name="tv_uvi">UVI</string>
    <string name="tv_from_date">Date</string>
    <string name="tv_to_date">Date</string>
    <string name="tv_from_time">Time</string>
    <string name="tv_to_time">Time</string>
    <string name="title_activity_notifications_map">NotificationsMap</string>
    <string name="tv_favorite_cities">Favorite Cities</string>
    <string name="tv_notifications">Notifications</string>
    <string name="btn_dismiss">Dismiss</string>

    <string name="channel_name">"Weather App Notification "</string>
    <string name="channel_description">Alert Notification</string>
    <string name="tv_mode">Mode</string>
    <string name="rb_light">Light</string>
    <string name="rb_dark">Dark</string>
</resources>