<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/weekFragment"
        android:icon="@drawable/ic_calendar_week_black_24dp"
        android:title="@string/title_week" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>